--- a/sigma.tex
+++ b/sigma.tex
@@ -1036,7 +1036,7 @@ This embedding of $E_\Lambda$ as an intersection of quadric surfaces in $\CP^3$ 
 
 The $\theta$--functions version of the story has two main successes: it continues to make sense in algebraic geometry, without invoking transcendental functions, and in fact there is a version of this story for an \emph{arbitrary} abelian variety.  It turns out that all abelian varieties are projective, and the theorem sitting at the heart of this claim is
 \begin{corollary}[{``Theorem of the Cube'', \cite[Corollary I.6.4 and Theorem I.7.1]{Milne}}]\label{Theta3IsTrivial}
-Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid (i.e., it has a specified trivialization at the identity point of $A$), then $\Theta^3(\L)$ is canonically trivialized by a section $s(A; \L)$. \qed
+Let $A$ be an abelian variety, let $p_i: A \times A \times A \to A$ be the projection onto the $i${\th} factor, and let $p_{ij} = p_i +_A p_j$, $p_{ijk} = p_i +_A p_j +_A p_k$.  Then for any invertible sheaf $\L$ on $A$, the sheaf \[\Theta^3(\L) := \frac{p_{123}^* \L \otimes p_1^* \L \otimes p_2^* \L \otimes p_3^* \L}{p_{12}^* \L \otimes p_{23}^* \L \otimes p_{31}^* \L \otimes p_\emptyset^* \L} = \bigotimes_{I \subseteq \{1, 2, 3\}} (p_I^* \L)^{(-1)^{|I| - 1}}\] on $A \times A \times A$ is trivial.  If $\L$ is rigid (i.e., it has a specified trivialization at the identity point of $A$), then $\Theta^3(\L)$ is \emph{canonically} trivialized by a section $s(A; \L)$. \qed
 \end{corollary}
 
 \begin{remark}
@@ -1153,7 +1153,7 @@ This function $e_{p^j}$ is called the \textit{($p^j$){\th} Weil pairing}.
 In the case that $A$ is an elliptic curve, this agrees with the usual definition of its ``Weil pairing''.  In the case of a \emph{complex} elliptic curve $\C / (1, \tau)$, this degenerates further to the assignment \[\left( \frac{a}{n}, \frac{b}{n} \tau \right) \mapsto \exp\left(-2\pi i \frac{ab}{n}\right).\]
 \end{remark}
 
-We now actually leverage the arithmetic geometry in \Cref{Theta3IsTrivial} by placing ourselves in a situation where algebraic topology is directly linked to abelian varieties.
+We now actually leverage this arithmetic geometry by placing ourselves in a situation where algebraic topology is directly linked to abelian varieties.
 
 \begin{definition}\label{DefnEllipticSpectrum}
 An \textit{elliptic spectrum} consists of a even--periodic ring spectrum $E$, a (generalized) elliptic curve $C$ over $\Spec E_0$, and a fixed isomorphism \[\phi\co C^\wedge_0 \xrightarrow{\cong} \CP^\infty_E.\]  A map among such spectra consists of a map of ring spectra $f\co E \to E'$ together with a specified isomorphism of elliptic curves $\psi\co f^* C \to C'$.\footnote{Elliptic curves and cohomology theories can be brought much closer together still, as in Lurie's framework~\cite[Sections 4 and 5.3]{LurieSurveyOfEll}.}
