some more expansion of A.2

--- a/quillen.tex
+++ b/quillen.tex
@@ -517,7 +517,7 @@ $BU \times \{0\}$ & stable virtual bundles of rank $0$ & $\Div_0 \CP^\infty_E$ &
 \caption{Different notions of vector bundles and their associated divisors}
 \end{figure}
 
-\begin{corollary}
+\begin{corollary}\label{ProductMapOfDivisorSchemes}
 There is a commutative diagram
 \begin{center}
 \begin{tikzcd}
